--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
         <label for="menu-toggle" class="burger"><span class="line-burger"></span>
         </label>
         <ul class="menu">
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Lorem</a></li>
+                <li><a href="https://es.fictionexpress.com/">Lorem</a></li>
+                <li><a href="https://es.fictionexpress.com/">Lorem</a></li>
+                <li><a href="https://es.fictionexpress.com/">Lorem</a></li>
+                <li><a href="https://es.fictionexpress.com/">Lorem</a></li>
             </ul>
         </ul>
         </nav>
@@ -84,10 +84,10 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
           Lorem ipsum
         </h3>
         <ul class="text-footer"> 
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
         </ul>
       </nav>
       
@@ -96,23 +96,23 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
           Lorem ipsum
         </h3>
         <ul class="text-footer">
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
+          <li><a href="https://es.fictionexpress.com/">Lorem ipsum</a></li>
         </ul>
       
         <ul class="icons-footer">
           <li>
-            <a class="linkedin" href="#">
+            <a class="linkedin" href="https://es.fictionexpress.com/">
             <i class="fab fa-brands fa-linkedin-in"></i>
           </a>
           </li>
-          <a class="instagram" href="#">
+          <a class="instagram" href="https://es.fictionexpress.com/">
             <i class="fab fa-brands fa-instagram"></i></a>
           </li>
         </li>
-        <a class="twitter" href="#">
+        <a class="twitter" href="https://es.fictionexpress.com/">
           <i class="fab fa-brands fa-twitter"></i></a>
         </li>
         </ul>
