--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
        
         <article class="book_description">
           <section class="about">
-            <img class="cover" src="/images/Caso 1 - Diseño gráfico Tatiana Nazarova.jpg" alt="La otra realidad del camino">
+            <img class="cover" src="../images/Caso 1 - Diseño gráfico Tatiana Nazarova.jpg" alt="La otra realidad del camino">
             <h4>Detalles del libro</h4>
             <ul class="text-details">
               <li>Tamaño: 23,0 x 14,5 cm</li>
